Notiflix &  SimpleLightbox  & Pixabay Key

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    
-    <input type="text" id="search-box" />
-    <ul class="country-list">
-      dhdghg
-    </ul>
-    <div class="country-info">dghdgh</div>
 
+<form class="search-form" id="search-form">
+  <input
+    type="text"
+    name="searchQuery"
+    autocomplete="off"
+    placeholder="Search images..."
+  />
+  <button type="submit">Search</button>
+</form>
 
+<!-- <button type="button" class="load-more ishiden">Load more</button> -->
 
     <script src="index.js" type="module"></script>
   </body>
