--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,21 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+        autofocus="on"
+      />
+      <button type="submit">Search</button>
+    </form>
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
 
-<form class="search-form" id="search-form">
-  <input
-    type="text"
-    name="searchQuery"
-    autocomplete="off"
-    placeholder="Search images..."
-  />
-  <button type="submit">Search</button>
-</form>
-
-<!-- <button type="button" class="load-more ishiden">Load more</button> -->
+    <button type="button" class="load-more is-hidden">Load more</button>
 
     <script src="index.js" type="module"></script>
   </body>
